Добавлен рейтинг у товаров, на странице товара, добавлен таб Отзывы

--- a/category.html
+++ b/category.html
@@ -434,6 +434,15 @@
 											<div class="weight">300 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -481,6 +490,15 @@
 											<div class="weight">43 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -524,6 +542,15 @@
 											</div>
 
 											<div class="weight">370 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -573,6 +600,15 @@
 											<div class="weight">72 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -613,6 +649,15 @@
 											<div class="price">114 Р.</div>
 
 											<div class="weight">1 л.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -660,6 +705,15 @@
 											<div class="weight">400 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -700,6 +754,15 @@
 											<div class="price">129 Р.</div>
 
 											<div class="weight">100 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -747,6 +810,15 @@
 											<div class="price">129 Р.</div>
 
 											<div class="weight">47 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -796,6 +868,15 @@
 											<div class="weight">300 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -843,6 +924,15 @@
 											<div class="weight">43 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -886,6 +976,15 @@
 											</div>
 
 											<div class="weight">370 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -935,6 +1034,15 @@
 											<div class="weight">72 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -975,6 +1083,15 @@
 											<div class="price">114 Р.</div>
 
 											<div class="weight">1 л.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -1022,6 +1139,15 @@
 											<div class="weight">400 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -1062,6 +1188,15 @@
 											<div class="price">129 Р.</div>
 
 											<div class="weight">100 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -1109,6 +1244,15 @@
 											<div class="price">129 Р.</div>
 
 											<div class="weight">47 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
