--- a/product.html
+++ b/product.html
@@ -344,6 +344,15 @@
 
 
 							<div class="info">
+								<div class="rating">
+									<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+									<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+									<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+									<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+									<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+									<span>34</span>
+								</div>
+
 								<button class="mob_composition_btn">Состав</button>
 
 								<div class="composition">
@@ -442,13 +451,171 @@
 						</div>
 
 
-						<div class="description">
-							<div class="block_head center">
-								<div class="title small">Подробнее о товаре</div>
+						<div class="product_tabs tabs_container">
+							<div class="tabs">
+								<button data-content="#product_tab1" data-level="level1" class="active">Подробнее о товаре</button>
+								<button data-content="#product_tab2" data-level="level1">Отзывы (34)</button>
 							</div>
 
-							<div class="tetx_block">
-								<p>Специально  для людей, которые отказались от мяса в пользу веганства, мы создали  линейку колбас исключительно из растительных компонентов, в основе  которых гороховый белок. Знакомьтесь, колбаса веганская "Оливье" Vegafood. Примечательно, что оливье во всём мире именуется "русским  салатом". Действительно, он пользуется огромной популярностью у наших  соотечественников. И неотъемлемой составляющей оливье является вареная  колбаса. Обычно колбасу добавляют в салат. Мы же решили салат  добавить в колбасу. Колбаса вареная "Оливье" в своем составе помимо прочего содержит зелёный горошек, соленые огурчики и фасоль. Теперь и приверженцы растительного образа питания  могут побаловать себя любимым салатом.</p>
+
+							<div class="tab_content level1 active" id="product_tab1">
+								<div class="text_block">
+									<p>Специально  для людей, которые отказались от мяса в пользу веганства, мы создали  линейку колбас исключительно из растительных компонентов, в основе  которых гороховый белок. Знакомьтесь, колбаса веганская "Оливье" Vegafood. Примечательно, что оливье во всём мире именуется "русским  салатом". Действительно, он пользуется огромной популярностью у наших  соотечественников. И неотъемлемой составляющей оливье является вареная  колбаса. Обычно колбасу добавляют в салат. Мы же решили салат  добавить в колбасу. Колбаса вареная "Оливье" в своем составе помимо прочего содержит зелёный горошек, соленые огурчики и фасоль. Теперь и приверженцы растительного образа питания  могут побаловать себя любимым салатом.</p>
+								</div>
+							</div>
+
+
+							<div class="tab_content level1" id="product_tab2">
+								<div class="reviews">
+									<div class="review">
+										<div class="info">
+											<div class="author">Александр</div>
+											<div class="date">26.12.2019 10:31:09</div>
+
+											<div class="rating">
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											</div>
+										</div>
+
+										<div class="text_block">
+											<p>Сама не пользовалась брала в подарок. Внешне выглядит красиво. Красный цвет очень яркий, на кнопках есть подсветка в тон. Зарядку по заявлением друга держит отлично. Звук отличный! Если в комплекте есть еще одна такая колонка, то они могут играть парой. В общем как подарок отличная штука!</p>
+										</div>
+									</div>
+
+
+									<div class="review answer">
+										<div class="info">
+											<div class="author">Александр</div>
+											<div class="date">26.12.2019 10:31:09</div>
+										</div>
+
+										<div class="text_block">
+											<p>Сама не пользовалась брала в подарок. Внешне выглядит красиво. Красный цвет очень яркий, на кнопках есть подсветка в тон. Зарядку по заявлением друга держит отлично. Звук отличный! Если в комплекте есть еще одна такая колонка, то они могут играть парой. В общем как подарок отличная штука!</p>
+										</div>
+									</div>
+
+
+									<div class="review">
+										<div class="info">
+											<div class="author">Александр</div>
+											<div class="date">26.12.2019 10:31:09</div>
+
+											<div class="rating">
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											</div>
+										</div>
+
+										<div class="text_block">
+											<p>Сама не пользовалась брала в подарок. Внешне выглядит красиво. Красный цвет очень яркий, на кнопках есть подсветка в тон. Зарядку по заявлением друга держит отлично. Звук отличный! Если в комплекте есть еще одна такая колонка, то они могут играть парой. В общем как подарок отличная штука!</p>
+										</div>
+									</div>
+
+
+									<div class="review">
+										<div class="info">
+											<div class="author">Александр</div>
+											<div class="date">26.12.2019 10:31:09</div>
+
+											<div class="rating">
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+												<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											</div>
+										</div>
+
+										<div class="text_block">
+											<p>Сама не пользовалась брала в подарок. Внешне выглядит красиво. Красный цвет очень яркий, на кнопках есть подсветка в тон. Зарядку по заявлением друга держит отлично. Звук отличный! Если в комплекте есть еще одна такая колонка, то они могут играть парой. В общем как подарок отличная штука!</p>
+										</div>
+									</div>
+
+									<div class="pagination">
+										<a href="/" class="prev">
+											<svg><use xlink:href="images/sprite.svg#ic_pag_arrow"></use></svg>
+										</a>
+
+										<a class="active">1</a>
+										<a href="/">2</a>
+										<a href="/">3</a>
+										<a href="/">4</a>
+
+										<a href="/" class="next">
+											<svg><use xlink:href="images/sprite.svg#ic_pag_arrow"></use></svg>
+										</a>
+									</div>
+
+
+									<div class="need_auth">
+										Чтобы добавить отзыв, пожалуйста <button class="modal_link" data-content="#login_modal">авторизуйтесь</button>.
+									</div>
+
+
+									<div class="add_review">
+										<div class="block_head">
+											<div class="title small">Оставить отзыв</div>
+										</div>
+
+										<form action="" class="form">
+											<div class="columns row">
+												<div class="line width1of3">
+													<div class="field">
+														<input type="text" name="" value="" class="input" placeholder="Ваше имя">
+													</div>
+												</div>
+
+												<div class="line row width1of3">
+													<div class="label">Оценка</div>
+
+													<div class="field stars">
+														<input type="radio" name="rating" id="rating-5">
+														<label for="rating-5">
+															<svg><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+														</label>
+
+														<input type="radio" name="rating" id="rating-4">
+														<label for="rating-4">
+															<svg><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+														</label>
+
+														<input type="radio" name="rating" id="rating-3">
+														<label for="rating-3">
+															<svg><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+														</label>
+
+														<input type="radio" name="rating" id="rating-2">
+														<label for="rating-2">
+															<svg><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+														</label>
+
+														<input type="radio" name="rating" id="rating-1">
+														<label for="rating-1">
+															<svg><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+														</label>
+													</div>
+												</div>
+											</div>
+
+											<div class="line">
+												<div class="field">
+													<textarea name="" placeholder="Ваш отзыв"></textarea>
+												</div>
+											</div>
+
+											<div class="submit">
+												<button type="submit" class="submit_btn">ОТПРАВИТЬ ОТЗЫВ</button>
+											</div>
+										</form>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -495,6 +662,15 @@
 											<div class="weight">490 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -542,6 +718,15 @@
 											<div class="price">249 Р.</div>
 
 											<div class="weight">300 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -593,6 +778,15 @@
 											<div class="weight">43 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -638,6 +832,15 @@
 											</div>
 
 											<div class="weight">370 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -687,6 +890,15 @@
 											<div class="price">59 Р.</div>
 
 											<div class="weight">72 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -740,6 +952,15 @@
 											<div class="weight">490 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -787,6 +1008,15 @@
 											<div class="price">249 Р.</div>
 
 											<div class="weight">300 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -838,6 +1068,15 @@
 											<div class="weight">43 гр.</div>
 										</div>
 
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
+										</div>
+
 										<div class="line">
 											<div class="amount">
 												<button type="button" class="minus"></button>
@@ -883,6 +1122,15 @@
 											</div>
 
 											<div class="weight">370 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
@@ -932,6 +1180,15 @@
 											<div class="price">59 Р.</div>
 
 											<div class="weight">72 гр.</div>
+										</div>
+
+										<div class="rating">
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star active"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<svg class="star"><use xlink:href="images/sprite.svg#ic_star"></use></svg>
+											<span>34</span>
 										</div>
 
 										<div class="line">
